<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_show_diseases"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_show_diseases" />
    
    <item
        android:id="@+id/action_show_parts"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/action_show_parts" />
    
    <item
        android:id="@+id/action_show_sources"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/action_show_sources" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="150"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

</menu>
